# tauri

./: README.md
crates/frontend/: Cargo.toml
crates/frontend/src/app/: mod.rs
crates/frontend/src/components/auth/: admin_route.rs  login_form.rs  protected_route.rs  register_form.rs  request_reset_form.rs  reset_form.rs
crates/frontend/src/services/: auth.rs  mod.rs  user.rs
crates/frontend/src/views/: home.rs  login.rs  register.rs
crates/server/: Cargo.toml
crates/server/src/: pool.rs
crates/server/src/strategies/: users.rs
crates/tauri/: Cargo.toml
crates/types/: Cargo.toml
crates/types/src/: auth.rs
