[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.128"
yew = { version = "0.21.0", features = ["csr"] }
yewdux = "0.10.0"
yew-router = "0.18"
yew-hooks = "0.3.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2.0"
js-sys = "0.3"
web-sys = { version = "0.3.69", features = ["Request", "RequestInit", "Response"] }
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", features = ["all"] }
types = { path = "../types" }
gloo-storage = "0.3.0"
gloo-console = "0.3.0"
gloo-net = "0.6.0"
reqwest = { version = "0.12.6", features = ["json"] }
http = "1.1.0"
once_cell = "1.20.1"
async-trait = "0.1.83"
email_address = "0.2.9"
