[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
axum-extra = { version = "0.9.2", features = ["typed-header", "cookie", "cookie-signed"] }
tower-http = { version = "0.5", features = ["cors"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }

types = { path = "../types", features = ["sqlx"] }
dotenv = "0.15.0"
sqlx = { version = "0.8.2", features = ["postgres", "sqlite", "any", "runtime-tokio-rustls"] }
once_cell = "1.20.1"
uuid = { version = "1.10.0", features = ["v4"] }
jsonwebtoken = { version = "9.3.0" }
bcrypt = { version = "0.15.1"  }
serde_json = "1.0.128"
http = "1.1.0"
tower = "0.5.1"
cookie = "0.18.1"
struct_iterable = "0.1.1"
base64 = "0.22.1"
email_address = "0.2.9"
futures = "0.3.30"
lettre = "0.11.9"
rand = "0.8.5"

[features]
sqlite = []
postgres = []
